@@ -4888,13 +4888,6 @@ The syntax is:
 .TP
 .B \-vf <filter1[=parameter1:parameter2:...],filter2,...>
 Setup a chain of video filters.
-.
-.TP
-.B \-vop <...,filter2[=parameter1:parameter2:...],filter1> (OBSOLETE)
-Setup a chain of video filters, to be applied in
-.B reverse
-order.
-Deprecated in favor of \-vf.
 .PP
 Many parameters are optional and set to default values if omitted.
 To explicitly use a default value set a parameter to '-1'.
